--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -11,7 +11,7 @@
     }
 
     //This is the main content container between the header and footer
-    background: url("watermark.png") no-repeat 0 80%;
+    /*background: url("watermark.png") no-repeat 0 80%;*/
   min-height: 100%;
   /*margin-bottom: -130px!important;*/
   -webkit-box-sizing: border-box;
@@ -27,9 +27,9 @@
 }
 
 body>footer {
-    background-color: rgb(153, 0, 255);
+    background-color: #A0148E;
     color: #fff;
-    min-height: 100px;
+    min-height: auto;
 
     a {
       color: #fff;
@@ -298,7 +298,7 @@ body>footer {
 
 .login-page {
     position: relative;
-    background: url(/static/ndf/images/login-background.png);
+    /*background: url(/static/ndf/images/login-background.png);*/
     background-size: 100% 100%;
     height: 100%;
 
