--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/filters.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/filters.html
@@ -34,9 +34,10 @@
 	div#filter-area {
 		//border: solid thin thistle;
  		border-radius: 5px;
-		padding: 0 5px 5px 5px;
+		padding: 10px;
 		margin-left: -10px;
-		margin-top: 2.5%;
+		background-color: #efefef;
+		/*margin-top: 2.5%;*/
  	}
 
 	/*div#filter-area:hover { border: dashed thistle; }*/
@@ -50,15 +51,15 @@
 		padding-bottom: 8px;
 	}
 	*/
-	div#create-filter { padding-top:0.75em; }
+	/*div#create-filter { padding-top:0.75em; }*/
 
-	div#applied-filters { 
+	div#applied-filters {
 		/*margin-top: -15px;*/
 		/*padding-left: 2em;*/
 		padding-bottom: 5px;
 		padding-top: 5px;
 	}
-	
+
 	#add-filters {
 		/*margin-left: 25px;*/
 		/*margin-top: 5px; */
@@ -74,16 +75,15 @@
 		/*padding-left: 10px;*/
 	}
 
-	div#select-filters {
-		background-color: #efefef;
+	/*div#select-filters {
 		padding-top: 0.5em;
 	    margin-left: 5px;
 	    margin-right: 5px;
 	    margin-bottom: 5px;
-	    border-radius: 0 0 5px 5px;
-	}
+	    border-radius: 5px;
+	}*/
 
-	div.filters{ 
+	div.filters{
 		/*padding: 5px 10px; */
 		margin: 2px 5px;
 		color: white;
@@ -104,16 +104,10 @@
 
 
 <div id="filter-area">
-	
-	<!-- top-filter row -->
-	<div class="row" >
-		
-		<div id="applied-filters" class="small-10 columns"></div>
-	</div>
 
 	<!-- second filter row -->
 	<div class="row" id="select-filters">
-		<!-- 
+		<!--
 		<div class="small-1 columns text-center" id="close-select-filters">
 			<i class="fi-x-circle" style="font-size:large;"></i>&nbsp; <br/>
 			Close
@@ -139,16 +133,16 @@
 								{% firstof val.altnames key %}
 							</option>
 						{% endfor %}
-						
+
 					</select>
 				</div>
 				<div class="small-12 large-3 columns">
-					<select name="filter-field-value"  
+					<select name="filter-field-value"
 					onblur="$(this).css('height', '')"
 					onfocus="$(this).css('height', '6em')" multiple disabled>
 						<option value=""> -- {% trans 'Select' %} -- </option>
-						
-					</select>				
+
+					</select>
 				</div>
 				<div class="small-12 large-3 columns">
 					<input type="button" class="button radius tiny" value="{% trans 'Filter' %}" id="filter-btn">
@@ -158,6 +152,11 @@
 
 	</div>
 	<!-- end of second level filter -->
+	<!-- top-filter row -->
+	<div class="row" >
+
+		<div id="applied-filters" class="small-12 columns"></div>
+	</div>
 
 </div>
 <!-- end of filter section -->
@@ -218,7 +217,7 @@
 			$selectValue.children("option:not(:first-child)").detach();
 
 			// as soon as second <select> is going to get populate,
-			// and it's multi-select increase it's height. 
+			// and it's multi-select increase it's height.
 			$selectValue.css("height", "6em");
 			$selectValue.css("opacity", "1");
 			$selectValue.removeAttr("disabled");
@@ -230,7 +229,7 @@
 			for (var i = 0; i < ffValuesArr.length; i++) {
 
 				// creating new <option> element by JS way
-				var newOption = document.createElement("option"); 
+				var newOption = document.createElement("option");
 				newOption.value = ffName;
 				newOption.text = String(ffValuesArr[i]).trim();
 				newOption.setAttribute("data-gstudio-type", ffType);
@@ -307,7 +306,7 @@
 			else
 			{
 				tempObj[temp] = [f];
-			} 
+			}
 		});
 		// console.log(tempObj)
 		// aaa = tempObj
@@ -331,12 +330,12 @@
 		// alert(filters);
 
 		if ((filters.length > 0) && url) {
-			
+
 			filters = JSON.stringify(filters);
 
 			url = url + 'filter?selfilters=' + filters;
 		}
-		
+
 		window.location.href = url;
 	}
 
@@ -362,14 +361,14 @@
 	    filtersInUrlList = filtersInUrlList.concat(filtersInUrl[key]['or']);
 
 	  }
-	  
+
 	}
 	// console.log(filtersInUrlList);
     filtersInUrlList.forEach(function(f){populateFilters (f.selFieldValue, f.selFieldValueAltnames, f.selFieldText, f.selFieldGstudioType, f.selFieldPrimaryType) });
 	updateFiltersCount();
 
 	function populateFilters (selFieldValue, selFieldValueAltnames, selFieldText, selFieldGstudioType, selFieldPrimaryType) {
-		
+
 					var filterText = selFieldValueAltnames + ": " + selFieldText;  // text to be visible as filter
 
 					// if new filter then creating it in a JS way
@@ -422,17 +421,17 @@
 
 		// getting already added filers as an array of objects, holding entire properties of it.
 		var filtersObjArr = getFiltersObjArr();
-		
+
 		// looping to fill prevFiltersArr.
 		$("#applied-filters").children("div.filters.label").each(function(){
-			prevFiltersArr.push(this.textContent.trim()) 
+			prevFiltersArr.push(this.textContent.trim())
 		});
 
 		if(selOpts.length > 0)  // if any of the second <select>'s option/s are selected
 		{
 			selOpts.each(function(){
 				// console.log(this.text)
-				
+
 				var selFieldValue = this.value.trim(),  // value id parent/key from first <select>
 					selFieldValueAltnames = this.getAttribute("data-value-altnames").trim(),
 					selFieldText  = this.text.trim(),   // actual text value of this <option>
@@ -491,7 +490,7 @@
 					filtersObj["selFieldPrimaryType"] = selFieldPrimaryType;
 
 					filtersObjArr.push(filtersObj);
-					
+
 				}
 				else  // handling selection of already existing filter
 				{
@@ -507,7 +506,7 @@
 
 			/**
 			===: Instructions :===
-			
+
 			Provide method applyFilter() in your template with following signature:
 			applyFilter(filtersObjArr)
 			where,
@@ -519,7 +518,7 @@
 						"selFieldText": selFieldText,
 						"selFieldPrimaryType": selFieldPrimaryType
 					}
-			
+
 			Example - for filter "audience: Teachers"
 			If "audience"(selFieldValue) is "attribute"(selFieldGstudioType) having data_type as "basestring"(selFieldPrimaryType) and value as "teachers"(selFieldText).
 			then filtersObjArr will be as follows:
@@ -534,7 +533,7 @@
 			And call the method as follows:
 			applyFilter(filtersObjArr).
 			**/
-			
+
 			// if filtersObjArr is having any object/selected-filter then only call applyFilter()
 			if(flagIsNewFilterSelected)
 			{
@@ -545,7 +544,7 @@
 		}
 		else  // handling no filter is selected
 		{
-		 	alert("{% trans 'Please select the proper filter first' %} !"); 
+		 	alert("{% trans 'Please select the proper filter first' %} !");
 		}
 
 	})
