Update old-count variable

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
@@ -366,7 +366,7 @@
 
               }
               // updating tab-text
-              // old_count = old_count + 1
+              old_count = old_count + 1
               updateDiscussionTabText();
               
             }
