--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
@@ -2,12 +2,10 @@
 {% load i18n %}
 
 {% block head %}
+
   <link href="/static/ndf/bower_components/jqtree/jqtree.css" rel="stylesheet">
   <script src="/static/ndf/bower_components/jqtree/tree.jquery.js"></script> <!-- checked -->
-
-  <script src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script> <!-- checked -->
-  <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/jquery-ui/themes/smoothness/jquery-ui.css"> <!-- checked -->
-
+  {% get_course_completetion_data group_obj request.user True as result_data %}
   <script type="text/javascript">
     $(document).ready(function() {
       {% check_is_gstaff groupid request.user as is_gstaff %}
@@ -77,13 +75,13 @@
 
         $.ajax({
           url: "{% url 'get_course_collection' group_id group_obj.pk True %}",
-
+          {% if result_data %}
           data: {
-            "completed_nodes": {% if completed_ids %}{{completed_ids|safe}}{% else %}null{% endif %},
-            "incompleted_nodes": {% if incompleted_ids %}{{incompleted_ids|safe}}{% else %}null{% endif %},
-            "leaf_nodes": {% if leaf_ids %}{{leaf_ids|safe}}{% else %}null{% endif %}
+            "completed_nodes": {{result_data.completed_ids|safe}},
+            "incompleted_nodes": {{result_data.incompleted_ids|safe}},
+            "leaf_nodes": {{result_data.leaf_ids|safe}}
           },
-
+          {% endif %}
           type: "GET",
 
           dataType: "json",
